--- a/app/src/main/res/values-zh-rTW/texts.xml
+++ b/app/src/main/res/values-zh-rTW/texts.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="current_res">zh-TW</string>
+    <string name="emoji_country">@string/emoji_taiwan</string>
 </resources>
